--- a/masar_ksa_hrms/fixtures/payroll_settings.json
+++ b/masar_ksa_hrms/fixtures/payroll_settings.json
@@ -11,8 +11,9 @@
   "email_template": null,
   "encrypt_salary_slips_in_emails": 0,
   "include_holidays_in_total_working_days": 1,
+  "jv_group_by": 1,
   "max_working_hours_against_timesheet": 0.0,
-  "modified": "2024-09-24 12:01:32.509754",
+  "modified": "2024-10-07 11:28:49.330685",
   "name": "Payroll Settings",
   "password_policy": null,
   "payroll_based_on": "Leave",
